test/spec_vectors/memory_fill/fail/module_36.wat
(module (memory 1 1) (func (export "testfn") (memory.fill (f32.const 10) (f64.const 20) (i32.const 30))))